[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/UI/UIResolutionSelector.gd" type="Script" id=1]
[ext_resource path="res://source/UI/UISettingCheckbox.gd" type="Script" id=2]
[ext_resource path="res://source/UI/SettingsBox.gd" type="Script" id=3]

[node name="SettingsPanel" type="Panel"]
margin_right = 220.0
margin_bottom = 146.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 220.0
margin_bottom = 146.0
alignment = 1

[node name="SettingsLabel" type="Label" parent="VBoxContainer"]
margin_top = 10.0
margin_right = 220.0
margin_bottom = 24.0
text = "Settings"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 220.0
margin_bottom = 32.0
rect_min_size = Vector2( 220, 0 )

[node name="UIResolutionSelector" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 220.0
margin_bottom = 56.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/UIResolutionSelector"]
margin_top = 3.0
margin_right = 100.0
margin_bottom = 17.0
rect_min_size = Vector2( 100, 0 )
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/UIResolutionSelector"]
margin_left = 104.0
margin_right = 196.0
margin_bottom = 20.0
text = "1280x720"
items = [ "1280x720", null, false, 0, null, "1920x1080", null, false, 1, null ]
selected = 0

[node name="UIFullScreenCheckbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 220.0
margin_bottom = 84.0
script = ExtResource( 2 )
title = "Full Screen"

[node name="Label" type="Label" parent="VBoxContainer/UIFullScreenCheckbox"]
margin_top = 5.0
margin_right = 110.0
margin_bottom = 19.0
rect_min_size = Vector2( 110, 0 )
text = "Full Screen"

[node name="FullScreenCheckBox" type="CheckBox" parent="VBoxContainer/UIFullScreenCheckbox"]
margin_left = 114.0
margin_right = 161.0
margin_bottom = 24.0
text = "On"

[node name="UIVsyncCheckbox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 220.0
margin_bottom = 112.0
script = ExtResource( 2 )
title = "VSync"

[node name="Label" type="Label" parent="VBoxContainer/UIVsyncCheckbox"]
margin_top = 5.0
margin_right = 110.0
margin_bottom = 19.0
rect_min_size = Vector2( 110, 0 )
text = "VSync"

[node name="VSyncCheckBox" type="CheckBox" parent="VBoxContainer/UIVsyncCheckbox"]
margin_left = 114.0
margin_right = 161.0
margin_bottom = 24.0
text = "On"

[node name="ApplyButton" type="Button" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 220.0
margin_bottom = 136.0
rect_min_size = Vector2( 170, 20 )
text = "Apply"

[connection signal="resolution_changed" from="VBoxContainer/UIResolutionSelector" to="." method="_on_UIResolutionSelector_resolution_changed"]
[connection signal="item_selected" from="VBoxContainer/UIResolutionSelector/OptionButton" to="VBoxContainer/UIResolutionSelector" method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="VBoxContainer/UIFullScreenCheckbox/FullScreenCheckBox" to="." method="_on_FullScreenCheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer/UIFullScreenCheckbox/FullScreenCheckBox" to="VBoxContainer/UIFullScreenCheckbox" method="_on_CheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer/UIVsyncCheckbox/VSyncCheckBox" to="." method="_on_VSyncCheckBox_toggled"]
[connection signal="toggled" from="VBoxContainer/UIVsyncCheckbox/VSyncCheckBox" to="VBoxContainer/UIVsyncCheckbox" method="_on_CheckBox_toggled"]
[connection signal="pressed" from="VBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
